Added AppDbSeed and changed framwork to EntityFrameworkCore

--- a/SMS.App/SMS.App.csproj
+++ b/SMS.App/SMS.App.csproj
@@ -9,6 +9,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.5.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.15" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.15">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SMS.Domain\SMS.Domain.csproj" />
     <ProjectReference Include="..\SMS.Infastructure\SMS.Infastructure.csproj" />
   </ItemGroup>
